# BigNumber

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_vc.bat
src/: CMakeLists.txt  arithmetic.cpp  bignumber.cpp  bignumber.h  binary.cpp  binary_op.cpp  bits.cpp  compare.cpp  counts.cpp  decls.h  exception.h  increments.cpp  number.cpp  number.h  parity.cpp  shifts.cpp  strings.cpp  util.cpp  util.h
tests/: CMakeLists.txt  arithmetic_test.cpp  binary_op_test.cpp  binary_test.cpp  bits_test.cpp  compare_test.cpp  counts_test.cpp  increments_test.cpp  init_test.cpp  parity_test.cpp  shifts_test.cpp  string_test.cpp  strings_test.cpp
